force-app/main/default/objects/Test_Result_Detail__c/Test_Result_Detail__c.object-meta.xml
<CustomObject>
    <label>Lab Test Results</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>LabOrder Hl7 Results Tests Parameters ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>