force-app/main/default/objects/Test_Result_Detail__c/fields/Abnormal_Flag__c.field-meta.xml
<CustomField>
    <fullName>Abnormal_Flag__c</fullName>
    <label>Abnormal Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>