force-app/main/default/objects/Test_Result_Detail__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>This field is used to store the Test Component name.</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>