force-app/main/default/objects/Test_Result_Detail__c/fields/DataforTrends__c.field-meta.xml
<CustomField>
    <fullName>DataforTrends__c</fullName>
    <formula>IF( Observation_Value_type__c = &apos;ST&apos;,VALUE( Observation_Value_Text__c ),IF( Observation_Value_type__c = &apos;NM&apos;, Observation_Value_Numeric__c ,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DataforTrends</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>