force-app/main/default/objects/Test_Result_Detail__c/fields/Date_Time_Of_Observation__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Of_Observation__c</fullName>
    <label>Date/Time Of Observation</label>
    <type>DateTime</type>
</CustomField>