force-app/main/default/objects/Test_Result_Detail__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <description>It is used to display a Red/Green flag in the lab order result. Normal values (within the range) will have a green flag,
 while abnormal values (outside the range) will have a red flag.</description>
    <formula>IF(
  NOT(ISBLANK (VALUE((Result_Value__c)))),
  IF(
    AND(
      VALUE(Result_Value__c) &gt;= Min_Value__c,
      VALUE(Result_Value__c) &lt;= Max_Value__c
    ),
    IMAGE(&quot;/resource/ElixirSuite__GreenFlag&quot;, &quot;Green Flag&quot;, 35, 35),
    IMAGE(&quot;/resource/ElixirSuite__RedFlag&quot;, &quot;Red Flag&quot;, 35, 35)
  ),
  &apos;No Flag&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>