force-app/main/default/objects/Test_Result_Detail__c/fields/HL7_Id__c.field-meta.xml
<CustomField>
    <fullName>HL7_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HL7 Id</label>
    <referenceTo>HL7__c</referenceTo>
    <relationshipName>Test_Result_Details</relationshipName>
    <type>Lookup</type>
</CustomField>