force-app/main/default/objects/Test_Result_Detail__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <description>This field is used to store the maximum value of the Test Component.</description>
    <label>Max. Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>