force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Identifier_Analyte_Code__c.field-meta.xml
<CustomField>
    <fullName>Observation_Identifier_Analyte_Code__c</fullName>
    <label>Observation Identifier - Analyte Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>