force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Identifier_Analyte_Descrip__c.field-meta.xml
<CustomField>
    <fullName>Observation_Identifier_Analyte_Descrip__c</fullName>
    <label>Observation Identifier - Analyte Descrip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>