force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Value__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value__c</fullName>
    <label>Observation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>