force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Value_Image__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value_Image__c</fullName>
    <label>Observation Value - Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>