force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Value_Image_Data_subtype__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value_Image_Data_subtype__c</fullName>
    <label>Observation Value - Image Data subtype</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>