force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Value_ImageEncoding_format__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value_ImageEncoding_format__c</fullName>
    <label>Observation Value - ImageEncoding format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>