force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Value_ImageSource__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value_ImageSource__c</fullName>
    <label>Observation Value - ImageSource</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>