force-app/main/default/objects/Test_Result_Detail__c/fields/Observation_Value_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value_Numeric__c</fullName>
    <label>Observation Value - Numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>