force-app/main/default/objects/Test_Result_Detail__c/fields/Observe_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Observe_Result_Status__c</fullName>
    <label>Observe Result Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>