force-app/main/default/objects/Test_Result_Detail__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>HL7_Id__r.Order_ID__r.Account_Id__r.Name</formula>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>