force-app/main/default/objects/Test_Result_Detail__c/fields/References_Range__c.field-meta.xml
<CustomField>
    <fullName>References_Range__c</fullName>
    <label>References Range</label>
    <type>TextArea</type>
</CustomField>