force-app/main/default/objects/Test_Result_Detail__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to Connect the result back to template Result.</description>
    <label>Result</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Test Result</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipName>LabOrder_Hl7_Results_Tests_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>