force-app/main/default/objects/Test_Result_Detail__c/fields/Result_Value__c.field-meta.xml
<CustomField>
    <fullName>Result_Value__c</fullName>
    <description>This field is used to record the component result.</description>
    <label>Result Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>