force-app/main/default/objects/Test_Result_Detail__c/fields/Segment_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type_Id__c</fullName>
    <label>Segment Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>