force-app/main/default/objects/Test_Result_Detail__c/fields/Set_ID_OBX__c.field-meta.xml
<CustomField>
    <fullName>Set_ID_OBX__c</fullName>
    <label>Set ID – OBX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>