force-app/main/default/objects/Test_Result_Detail__c/fields/Test_Result_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Result_Detail_Id__c</fullName>
    <label>Test Result Detail Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>