force-app/main/default/objects/Test_Result_Detail__c/fields/Test_Result_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Result_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Result Id</label>
    <referenceTo>LabOrder_Hl7_Results_Tests_Info__c</referenceTo>
    <relationshipName>Test_Result_Details</relationshipName>
    <type>Lookup</type>
</CustomField>