force-app/main/default/objects/Test_Result_Detail__c/fields/Test_ResultId__c.field-meta.xml
<CustomField>
    <fullName>Test_ResultId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Result Id</label>
    <referenceTo>Lab_Order__c</referenceTo>
    <relationshipName>LabOrder_Hl7_Results_Tests_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>