force-app/main/default/objects/Test_Result_Detail__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Unit</label>
    <type>TextArea</type>
</CustomField>