force-app/main/default/objects/Test_Result_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Component_Name__c</columns>
    <columns>Result_Value__c</columns>
    <columns>Units__c</columns>
    <columns>Min_Value__c</columns>
    <columns>Max_Value__c</columns>
    <columns>Observation_Value_TextAREA__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>